--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <title>AirBnB clone</title>
 </head>
 
-<body style="margin: 0; padding: 0">
-    <header style="color: red; height: 70px; width: 100px;"></header>
-    <footer style="color: green; height: 60px; width: 100px; text-align: center">Holberton School</footer>
+<body style="margin: 0;padding: 0">
+    <header style="background-color: #FF0000; height: 70px; width: 100%;">
+    </header>
+    <footer style="background-color: #00FF00; height: 60px; width: 100%; bottom: 0; position: absolute;">
+        <p style=" text-align: center;">Holberton School</p>
+    </footer>
 </body>
-
-</html>
