--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-    <header>
-    </header>
+    <header></header>
     <div class="container">
         <section class="filters">
             <button>Search</button>
