changes in files

--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -44,26 +44,41 @@
                     </ul>
                 </div>
             </div>
-            <button>Search</button>
-        </section>
-        <section class="places">
-            <h1>Places</h1>
-            <div>
-                <article>
-                    <h2>My home</h2>
-                </article>
-                <article>
-                    <h2>Tiny house</h2>
-                </article>
-                <article>
-                    <h2>A suite</h2>
-                </article>
+            <div class="f_button">
+                <button class="s_button">Search</button>
             </div>
         </section>
-    </div>
-    <footer>
-        <p>Holberton School</p>
-    </footer>
+        <section class="places">
+            <div class="places-name">
+                <h1>Places</h1>
+            </div>
+            <div class="place-article">
+                <article>
+                    <div class="article-details">
+                        <div class="article-name">
+                            <h2>My home</h2>
+                        </div>
+                </article>
+                <article>
+                    <div class="article-details">
+                        <div class="article-name">
+                            <h2>Tiny house</h2>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="article-details">
+                        <div class="article-name">
+                            <h2>Tiny house</h2>
+                        </div>
+                    </div>
+                </article>
+                </div>
+        </section>
+        </div>
+        <footer>
+            <p>Holberton School</p>
+        </footer>
 </body>
 
 </html>
