--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -4,7 +4,7 @@
 <head>
     <title>AirBnB clone</title>
     <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/5-filters.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="icon" href="images/icon.png">
@@ -17,13 +17,27 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>Medellin, Antioquia</h4>
+                <h4>Medellin, Antoquia</h4>
+                <div class="popover">
+                    <h2>Bolivar:</h2>
+                    <ul>
+                        <li>page</li>
+                        <li>page2</li>
+                    </ul>
+                    <h2>Cundinamarca:</h2>
+                    <ul>
+                        <li>Casa de Nariño</li>
+                        <li>El Centro</li>
+                    </ul>
+                </div>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Pool, Soccer Field</h4>
             </div>
-            <button>Search</button>
+            <div class="f_button">
+                <button class="s_button">Search</button>
+            </div>
         </section>
     </div>
     <footer>
