--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -43,7 +43,9 @@
                     </ul>
                 </div>
             </div>
-            <button>Search</button>
+            <div class="f_button">
+                <button class="s_button">Search</button>
+            </div>
         </section>
     </div>
     <footer>
