fix file in html

--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -55,30 +55,25 @@
             <div class="place-article">
                 <article>
                     <div class="article-details">
-                        <div class="article-name">
-                            <h2>My home</h2>
-                        </div>
-                </article>
-                <article>
-                    <div class="article-details">
-                        <div class="article-name">
-                            <h2>Tiny house</h2>
-                        </div>
+                        <h2>My home</h2>
                     </div>
                 </article>
                 <article>
                     <div class="article-details">
-                        <div class="article-name">
-                            <h2>Tiny house</h2>
-                        </div>
+                        <h2>Tiny house</h2>
                     </div>
                 </article>
-                </div>
+                <article>
+                    <div class="article-details">
+                        <h2>A suite</h2>
+                    </div>
+                </article>
+            </div>
         </section>
-        </div>
-        <footer>
-            <p>Holberton School</p>
-        </footer>
+    </div>
+    <footer>
+        <p>Holberton School</p>
+    </footer>
 </body>
 
 </html>
